@@ -11,30 +11,75 @@ http://java.com/en/download/
 
 Install ruby 1.9.3 or later (e.g., via rvm).
 
-### Check Out the Code and Install Ruby Dependencies
+### Check Out the Code
     
 ```bash
 git clone https://github.com/sul-dlss/argo.git
 cd argo
-bundle install
 ```
     
-### Configure the solr and database yml files.  Stanford users should review internal documentation.
-
-### Install components and DB:
+### Configure the database.yml file.  Stanford users should review internal documentation.
 
 ```bash
+cp config/database.yml.example config/database.yml
+```
+
+### Configure the rest of the local environment.  Stanford users should review internal documentation.
+
+You will also need to acquire the following config files (per environment):
+
+ - `config/environments/development.rb`
+ - `config/environments/dor_development.rb`
+ - `config/environments/test.rb`
+ - `config/environments/dor_test.rb`
+ - `config/certs/dlss-dev-$USER-dor-dev.crt`  # should match the value specified by cert_file in dor_development.rb
+ - `config/certs/dlss-dev-$USER-dor-dev.key`  # should match the value specified by key_file in dor_development.rb
+
+### Run bundler to install the Gem dependencies
+
+`bundle install`
+
+`bundle install` may complain if MySQL isn't installed.  You can either comment out the mysql2 inclusion in Gemfile and come back to it later (you can develop using sqlite), or you can install MySQL.
+
+### Install components, setup DB and Solr:
+
+```bash
+rails generate argo:solr
 rake argo:jetty:clean
 rake argo:jetty:config
 rake db:setup
-rake db:migrate RAILS_ENV=test
+rake db:migrate
 rake tmp:create
 ```
+
+### Optional - Increase Jetty heap size and Solr logging verbosity
+#### Delving into this is only recemmended if you run into more trouble than usual starting jetty or getting it to run stably (or if you know you have some other reason to make these sorts of changes).
+
+In the created `./jetty` directory add the following to the `start.ini` to increase the heap size, allow the debugger to attach, and to explicitly specify logging properties.
+
+In the section that starts with the heading `If the arguments in this file include JVM arguments` (at LN19 as of this README update):
+```
+--exec
+
+Djava.awt.headless=true
+-Dcom.sun.management.jmxremote
+-Xmx2000m
+-XX:+PrintCommandLineFlags
+-XX:+UseConcMarkSweepGC
+-XX:+CMSClassUnloadingEnabled
+-XX:PermSize=64M
+-XX:MaxPermSize=256M
+
+# Solr logging
+-Djava.util.logging.config.file=etc/logging.properties
+```
+
+You may then update values in `jetty/etc/logging.properties` to change logging settings (e.g., set `.level = FINEST`).
 
 ## Run the server
 
 ```bash
-rake jetty:start
+rake jetty:start # This may take a few minutes
 rails server
 ```
 
